--- a/templates/index.html
+++ b/templates/index.html
@@ -31,31 +31,83 @@
           <button class="search-button" id="searchButton">
             <img src="../static/res/search.png" height="20" width="20" />
           </button>
+          <script>
+            const searchButton = document.getElementById("searchButton");
+            searchButton.addEventListener("click", function () {
+              // Get the input value
+              const searchInput = document.getElementById("searchInput");
+              const inputValue = searchInput.value;
+
+              // Log the input value to the console
+              console.log("Input value: " + inputValue);
+
+              // You can also send the input value to the server using the handleClick function
+              handleClick(inputValue);
+            });
+          </script>
         </div>
       </div>
       <div class="main">
         <div class="tweet-info">
-          <div class="tweet-hot"></div>
+          <div class="tweet-hot">
+            <div
+              style="
+                font-size: 25px;
+                text-align: center;
+                font-family: 'Courier New', monospace;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+                background-size: cover;
+                color: black;
+                font-weight: bolder;
+                --webkit-background-clip: text;
+                --webkit-text-fill-color: transparent;
+              "
+            >
+              Hot Tennis Tweets
+            </div>
+
+            <div
+              style="
+                width: 90%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: center;
+                background: url('../static/res/tennis-court-background.png')
+                  repeat center center;
+                border: 2px solid #ccc;
+                overflow: hidden;
+                border-radius: 15px;
+                box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+              "
+              id="tennisTweets"
+            ></div>
+            <script>
+              let tweet_block2 = tweets("tennisTweets");
+              connect_block(tweet_block2, "tennisTweetStream");
+            </script>
+          </div>
           <div class="tweet-desc"></div>
         </div>
         <div class="tweet-list">
           <div class="categories">
-            <button id="basketballButton" class="category">Basketball</button>
-            <button id="tennisButton" class="category">Tennis</button>
-            <button id="baseballButton" class="category">Baseball</button>
-            <button id="volleyballButton" class="category">Volleyball</button>
-            <button id="cricketButton" class="category">Cricket</button>
-            <button id="footballButton" class="category">Soccer</button>
-            <button id="basketballButton" class="category">Football</button>
-            <button id="rugbyButton" class="category">Rugby</button>
+            <button id="none" class="category">All</button>
+            <button id="basketball" class="category">Basketball</button>
+            <button id="baseball" class="category">Baseball</button>
+            <button id="volleyball" class="category">Volleyball</button>
+            <button id="cricket" class="category">Cricket</button>
+            <button id="soccer" class="category">Soccer</button>
+            <button id="football" class="category">Football</button>
+            <button id="rugby" class="category">Rugby</button>
 
             <script>
-              var myButton = document.getElementById(id);
-
-              // Attach the handleClick function from the external script to the button's click event
-              myButton.onclick = handleClick;
-              // let x = buttons("basketballButton");
-              // connect_block(x, "buttonFunc");
+              var buttons = document.querySelectorAll(".category");
+              buttons.forEach(function (button) {
+                button.addEventListener("click", function () {
+                  handleClick(this.id);
+                });
+              });
             </script>
           </div>
 
@@ -101,6 +153,21 @@
               let chart = piechart("myChart");
               connect_block(chart, "piechart");
             </script>
+          </div>
+          <div
+            style="
+              width: 100%;
+              height: 100%;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            "
+            class="chart"
+          >
+            <div
+              style="margin-top: 2rem; max-width: 100%; max-height: 100%"
+              id="wordcloud"
+            ></div>
           </div>
         </div>
       </div>
